--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Roboto Condensed';
+    font-size: 12px;
+    font-style: normal;
     box-sizing: border-box;
   }
