--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -1,23 +1,6 @@
-.card {
-    width: 300px;
-    height: 330px;
-    &__inform {
-        width: 300px;
-        display: inline-grid;
-        grid-template-columns: 1fr 1fr;
-        grid-row-gap: 3px;
-        margin-bottom: 1px;
-        &-status,
-        &-location {
-            text-align: right;
-        }
-        &-gender,
-        &-location {
-            color: #8D8D8D;
-        }
-    }
-    &__image {
-        width: 300px;
-        height: 300px;
+@media (min-width: 768px) {
+    .card {
+        margin-bottom: 0px; 
     }
 }
+
