--- a/src/components/Index/style.scss
+++ b/src/components/Index/style.scss
@@ -1,13 +1,12 @@
-.container {
-    margin: 0 auto;
-    width: 630px;
-    height: 100%;
-}
-.cards {
-    margin: 0;
-    margin-top: 16px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 30px;
-    column-gap: 30px;
+@media (min-width: 768px) {
+    .container {
+        width: 630px;
+    }
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 30px;
+        column-gap: 30px;
+    }
+
 }
