--- a/src/components/Index/media.scss
+++ b/src/components/Index/media.scss
@@ -21,4 +21,7 @@
     opacity: 0.9;
     height: 60px;
     width: 100%;
+
+    cursor: pointer;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
