--- a/src/components/Card/media.scss
+++ b/src/components/Card/media.scss
@@ -4,7 +4,7 @@
     margin-bottom: 30px;
     &__inform {
         display: inline-grid;
-        grid-template-columns: 0.5fr 1.5fr;
+        grid-template-columns: auto auto;
         grid-row-gap: 3px;
 
         width: 300px;
